# debug-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
ckg-augment/: README.md  pyproject.toml
ckg-augment/ckg_augment/: __init__.py  augmenter.py  cli.py  fix_db.py  fix_extractor.py  report_archive.py
ckg-augment/tests/: conftest.py  test_augmenter.py  test_cli_bootstrap.py  test_fix_db.py  test_report_archive.py
data/: first  second  third
debug-engine/: README.md  requirements.txt
examples/: expert_analysis.txt  problem_description.txt
implementation-plan/: ckg-augment-feedback-v1.md  ckg-augment-fix-db-design.md  ckg-augment-report-and-query-archive-design.md  ckg-augmenter-design.md  closed-loop-ckg-optimizer-architecture.md  closed-loop-implementation-plan-per-case.md  debug-agent-anti-hallucination-coverage-gate-plan.md  debug-agent-step-by-step.md  feedback-adapter-plan.md  feedback-relations-extension.md  hybrid-agent-step-by-step.md  iterative-closed-loop-runner-plan.md  llm-editor-metric-blending-plan.md  orchestrator-best-iteration-selection.md  orchestrator-testing-plan.md  smart-anomaly-detection-v2.md  smart-anomaly-detection-v2_1.md
judge/: __init__.py  cli.py  llm_judge.py  models.py
orchastrator/: README.md  __init__.py  case_loop.py  cli.py  feedback.py  feedback_adapter.py  models.py  orchestrator.py  pyproject.toml  single_case_loop.py
output/: ckg_for_llm.md  ckg_graph.dot  ckg_graph.json  ckg_visualization.html  ckg_visualization_v2.html  combined_ckg.html  combined_ckg.json  enhanced_ckg_visualization.html  (+10 more)
(+571 files in other folders)
