[project]
name = "inference-engine"
version = "0.1.0"
description = "Causal Knowledge Graph Generator - Extract analysis logic from expert reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.7.0",
    "networkx>=3.2",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "graphviz>=0.20",
    "pyvis>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
inference-engine = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
